fix: footer link

--- a/index.html
+++ b/index.html
@@ -506,7 +506,7 @@
 				</button>
 			</section>
 		</main>
-		<footer>Página por: <a href="github.com/Nyveon">Eric K.</a></footer>
+		<footer>Página por: <a href="https://github.com/Nyveon">Eric K.</a></footer>
 
 		<script defer>
 			feather.replace();
